[gd_scene load_steps=2 format=3 uid="uid://ro3abyjyyr10"]

[ext_resource type="Script" uid="uid://wnv2g1rtrloh" path="res://Resources/Scripts/cassette_manager.gd" id="1_g6rdw"]

[node name="CassetteManager" type="Node2D"]

[node name="CassetteManager" type="CanvasLayer" parent="."]
layer = 60
script = ExtResource("1_g6rdw")

[node name="Root" type="Control" parent="CassetteManager"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Dim" type="ColorRect" parent="CassetteManager/Root"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.18431373)

[node name="MarginContainer" type="MarginContainer" parent="CassetteManager/Root"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CassetteManager/Root/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CassetteManager/Root/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VideoPlayer" type="VideoStreamPlayer" parent="CassetteManager/Root/MarginContainer/VBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="CassetteManager/Root/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="CassetteManager/Root/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cassette
"

[node name="CloseButton" type="Button" parent="CassetteManager/Root/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close
"

[node name="PlayPauseButton" type="Button" parent="CassetteManager/Root/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pause"
